--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
-        "laravel/sanctum": "^2.6",
+        "laravel/passport": "9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "laravolt/avatar": "^3.2",
